# MeshOffsetProcess_Axel

./: CMakeLists.txt  README.md
axl/: CMakeLists.txt
axl/MyPlugin/: CMakeLists.txt  MyPluginDefaultData.cpp  MyPluginDefaultData.h  MyPluginDefaultDataConverter.cpp  MyPluginDefaultDataConverter.h  MyPluginDefaultDataCreatorProcessDialog.cpp  MyPluginDefaultDataCreatorProcessDialog.h  MyPluginDefaultDataDialog.cpp  MyPluginDefaultDataDialog.h  MyPluginDefaultDataReader.cpp  MyPluginDefaultDataReader.h  MyPluginDefaultDataWriter.cpp  MyPluginDefaultDataWriter.h  MyPluginDefaultProcess.cpp  MyPluginDefaultProcess.h  MyPluginDefaultProcessDialog.cpp  MyPluginPlugin.cpp  MyPluginPlugin.h  MyPluginPluginExport.h
doc/: CMakeLists.txt
doc/doxygen/: doxyfile-cmake.in  main.dox  structure_plugin.dox
src/: CMakeLists.txt
src/mypkg/: CMakeLists.txt  my_class.cpp  my_class.h
